<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/dimen_25dp"
            android:text="@string/dialog_message"
            android:textColor="#ffffff"
            android:textSize="@dimen/dimen_40sp" />

        <TextView
            android:id="@+id/download_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dimen_25dp"
            android:paddingLeft="@dimen/dimen_30dp"
            android:text="@string/dialog_default_percent"
            android:textSize="@dimen/dimen_40sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/download_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="@dimen/dimen_30dp"
            android:text="@string/dialog_default_speed"
            android:textSize="@dimen/dimen_30sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/process"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_8dp"
        android:layout_marginLeft="@dimen/dimen_90dp"
        android:layout_marginRight="@dimen/dimen_90dp"
        android:progress="0"
        android:progressDrawable="@drawable/history_progress_bg" />


    <include
        layout="@layout/dialog_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></include>


</LinearLayout>