<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/dimen_10dp"
        android:layout_height="@dimen/dimen_74dp"
        android:layout_marginLeft="@dimen/dimen_96dp"
        android:layout_marginTop="@dimen/dimen_54dp"
        android:background="#ffc000" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_55dp"
        android:layout_toRightOf="@id/line"
        android:text="@string/film"
        android:textSize="@dimen/dimen_56sp" />

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dimen_120dp"
        android:layout_marginTop="@dimen/dimen_76dp"
        android:gravity="center"
        android:text="@string/video_pick_select"
        android:textSize="@dimen/dimen_32sp" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="@dimen/dimen_32dp"
        android:layout_height="@dimen/dimen_24dp"
        android:layout_alignTop="@id/select"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_toLeftOf="@id/select"
        android:src="@drawable/icon_menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/select"
        android:layout_toLeftOf="@id/menu"
        android:gravity="center"
        android:text="@string/video_pick_menu"
        android:textSize="@dimen/dimen_32sp" />

    <ImageView
        android:layout_width="@dimen/dimen_335dp"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/select"
        android:layout_marginRight="@dimen/dimen_83dp"
        android:layout_marginTop="@dimen/dimen_13dp"
        android:src="@drawable/icon_top_line" />

    <cn.cncgroup.tv.ui.widget.CustomScrollVerticalGridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line"
        android:layout_marginBottom="@dimen/dimen_28dp"
        android:layout_marginLeft="@dimen/dimen_96dp"
        android:layout_marginRight="@dimen/dimen_52dp"
        android:layout_marginTop="@dimen/dimen_64dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="@dimen/dimen_12dp"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb_vertical"
        android:scrollbarTrackVertical="@drawable/scrollbar_track_vertical"
        android:scrollbars="vertical" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/dimen_28dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_35dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_left"
        android:visibility="invisible" />

    <cn.cncgroup.tv.ui.widget.ShadowView
        android:id="@+id/shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/home_title_focus"
        android:visibility="invisible" />
</RelativeLayout>
