<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recommend_back"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="@dimen/dimen_640dp"
        android:layout_height="match_parent"
        android:background="@color/white_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_70dp"
            android:layout_marginTop="@dimen/dimen_52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_title_icon"
                android:layout_width="@dimen/dimen_26dp"
                android:layout_height="@dimen/dimen_46dp"
                android:src="@drawable/icon_arrow" />

            <TextView
                android:id="@+id/search_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_24dp"
                android:text="@string/search"
                android:textSize="@dimen/dimen_48sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_56dp">

            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_110dp"
                android:layout_marginRight="@dimen/dimen_180dp"
                android:background="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="输入你要的影片资源"
                android:textColorHint="@color/white_20"
                android:textSize="@dimen/dimen_30sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_input"
                android:layout_marginTop="@dimen/dimen_22dp"
                android:src="@drawable/line_search" />

            <ImageView
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_110dp"
                android:src="@drawable/icon_search" />
        </RelativeLayout>

        <cn.cncgroup.tv.ui.widget.gridview.VerticalGridView
            android:id="@+id/search_keyboard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_650dp"
            android:layout_marginBottom="@dimen/dimen_34dp"
            android:layout_marginLeft="@dimen/dimen_66dp"
            android:layout_marginTop="@dimen/dimen_34dp"
            android:gravity="center_horizontal"
            app:columnWidth="@dimen/dimen_146dp"
            app:horizontalMargin="@dimen/dimen_44dp"
            app:numberOfColumns="3"
            app:verticalMargin="@dimen/dimen_22dp">

            <requestFocus />
        </cn.cncgroup.tv.ui.widget.gridview.VerticalGridView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_input"
            android:layout_marginTop="@dimen/dimen_22dp"
            android:src="@drawable/line_search" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_hint"
                android:textColor="@color/white_20"
                android:textSize="@dimen/dimen_28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:text="@string/search_menubefore"
                    android:textColor="@color/white_40"
                    android:textSize="@dimen/dimen_28sp" />

                <ImageView
                    android:layout_width="@dimen/dimen_28dp"
                    android:layout_height="@dimen/dimen_22dp"
                    android:layout_marginTop="@dimen/dimen_1dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/search_icon_menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_menuafter"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white_40"
                    android:textSize="@dimen/dimen_28sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/dimen_12dp"
        android:layout_height="match_parent"
        android:src="@drawable/shadow_search" />

    <FrameLayout
        android:id="@+id/search_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>