<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/other_contener"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/poster"
            android:layout_width="@dimen/dimen_784dp"
            android:layout_height="@dimen/dimen_435dp"
            android:layout_marginLeft="@dimen/dimen_96dp"
            android:layout_marginTop="@dimen/dimen_96dp"
            android:clickable="false"
            android:focusable="false"
            fresco:placeholderImage="@drawable/default_video_postbg"
            fresco:placeholderImageScaleType="fitXY"
            fresco:roundedCornerRadius="10px" />

        <cn.cncgroup.tv.ui.widget.MarqueeTextView
            android:id="@+id/variety_detail_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster"
            android:layout_marginLeft="@dimen/dimen_96dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:layout_toLeftOf="@+id/rl_gather"
            android:text="@string/nulls"
            android:textSize="@dimen/dimen_60sp" />

        <RelativeLayout
            android:id="@+id/rl_gather"
            android:layout_width="@dimen/dimen_230dp"
            android:layout_height="@dimen/dimen_70dp"
            android:layout_alignBottom="@id/variety_detail_tv_title"
            android:layout_alignRight="@+id/poster"
            android:layout_below="@+id/poster"
            android:layout_marginStart="@dimen/dimen_39dp"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:background="@drawable/details_btn_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:nextFocusDown="@+id/rl_gather"
            android:nextFocusLeft="@+id/rl_gather"
            android:nextFocusRight="@+id/variety_detail_gridiew"
            android:nextFocusUp="@+id/rl_gather"
            android:paddingEnd="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp">

            <ImageView
                android:id="@+id/iv_gather"
                style="@style/teleplay_detales_rl_imageview"
                android:src="@drawable/ungather_icon" />

            <TextView
                android:id="@+id/tv_gather"
                style="@style/teleplay_detales_rl_textiew"
                android:layout_toEndOf="@+id/iv_gather" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/variety_detail_img_collect"
            android:layout_width="@dimen/dimen_190dp"
            android:layout_height="@dimen/dimen_70dp"
            android:layout_alignBottom="@id/variety_detail_tv_title"
            android:layout_alignRight="@+id/poster"
            android:layout_below="@+id/poster"
            android:layout_marginTop="@dimen/dimen_64dp"
            android:background="@drawable/item_detail_collect_selector"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/detail_img_separator"
            android:layout_width="@dimen/dimen_784dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_below="@+id/variety_detail_tv_title"
            android:layout_marginLeft="@dimen/dimen_96dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/detail_text_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/detail_img_separator"
            android:layout_below="@id/detail_img_separator"
            android:layout_marginTop="@dimen/dimen_44dp"
            android:text="@string/detail_presenter"
            android:textColor="@color/white_40"
            android:textSize="@dimen/dimen_30sp" />

        <TextView
            android:id="@+id/variety_detail_tv_presenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/detail_text_host"
            android:layout_toRightOf="@id/detail_text_host"
            android:text="@string/nulls"
            android:textSize="@dimen/dimen_30sp" />

        <TextView
            android:id="@+id/detail_text_brief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/detail_text_host"
            android:layout_below="@id/detail_text_host"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:text="@string/detail_brief"
            android:textColor="@color/white_40"
            android:textSize="@dimen/dimen_30sp" />

        <TextView
            android:id="@+id/variety_detail_desc"
            android:layout_width="@dimen/dimen_660dp"
            android:layout_height="@dimen/dimen_196dp"
            android:layout_alignLeft="@id/variety_detail_tv_presenter"
            android:layout_alignRight="@id/variety_detail_img_collect"
            android:layout_alignTop="@id/detail_text_brief"
            android:layout_marginBottom="@dimen/dimen_90dp"
            android:layout_toRightOf="@id/detail_text_brief"
            android:ellipsize="end"
            android:lines="4"
            android:maxLines="4"
            android:text="@string/nulls"
            android:textSize="@dimen/dimen_30sp" />

        <cn.cncgroup.tv.ui.widget.gridview.VerticalGridView
            android:id="@+id/variety_detail_gridiew"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_96dp"
            android:layout_marginLeft="@dimen/dimen_102dp"
            android:layout_marginRight="@dimen/dimen_96dp"
            android:layout_marginTop="@dimen/dimen_96dp"
            android:layout_toRightOf="@+id/poster"
            android:nextFocusLeft="@+id/player_contener"
            app:verticalMargin="@dimen/dimen_20dp">

            <requestFocus />
        </cn.cncgroup.tv.ui.widget.gridview.VerticalGridView>

        <ImageView
            android:id="@+id/variety_detail_image_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/dimen_23dp"
            android:layout_marginRight="@dimen/dimen_502dp"
            android:src="@drawable/variety_detail_image_hint"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/player_contener"
        android:layout_width="@dimen/dimen_784dp"
        android:layout_height="@dimen/dimen_435dp"
        android:layout_marginLeft="@dimen/dimen_96dp"
        android:layout_marginTop="@dimen/dimen_96dp"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone" />

    <cn.cncgroup.tv.ui.widget.ShadowView
        android:id="@+id/shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/home_title_focus"
        android:visibility="invisible" />
</FrameLayout>